workloads/s3proxy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3proxy
  namespace: flink
  labels:
    app: s3proxy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: http
    protocol: TCP
  selector:
    app: s3proxy
