workloads/s3proxy/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: s3proxy
  namespace: flink
  annotations:
    argocd.argoproj.io/sync-wave: "25"
spec:
  routes:
    - match: Host(`s3proxy.CLUSTER_NAME.confluentdemo.local`)
      kind: Rule
      services:
        - name: s3proxy
          port: 8000
          scheme: http
